// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeView component renders correctly 1`] = `
<Text
  style={
    Object {
      "color": "#627286",
      "fontFamily": "OpenSans-Regular",
      "fontSize": 14,
    }
  }
  testID="time_view"
>
  common:time:today common:time:at 12:00 AM
</Text>
`;

exports[`TimeView component style 1`] = `
<Text
  style={
    Object {
      "color": "#FF9800",
      "fontFamily": "OpenSans-Regular",
      "fontSize": 14,
    }
  }
  testID="time_view"
>
  common:time:today common:time:at 12:00 AM
</Text>
`;

exports[`TimeView component textProps 1`] = `
<Text
  numberOfLines={2}
  style={
    Object {
      "color": "#627286",
      "fontFamily": "OpenSans-Regular",
      "fontSize": 14,
    }
  }
  testID="time_view"
>
  common:time:today common:time:at 12:00 AM
</Text>
`;

exports[`TimeView component type short 1`] = `
<Text
  style={
    Object {
      "color": "#627286",
      "fontFamily": "OpenSans-Regular",
      "fontSize": 14,
    }
  }
  testID="time_view"
>
  18common:time:short_hour
</Text>
`;
